# Fast-API--------

./: README.md  pyproject.toml  sql_app.db
app/: database.py  main.py
app/cruds/: cruds.py
app/models/: models.py
app/routers/: booking.py  rooms.py  users.py
app/schemas/: schemas.py
frontend/: app.py
study_sample/: study.md
study_sample/fastapi_sample/: main.py  sample.py
study_sample/streamlit_sample/: README.md  app.py
