[tool.poetry]
name = "fast api 部屋予約サイト"
version = "0.1.0"
description = ""
authors = ["YUBI <sugar7630@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
streamlit = "^1.41.1"
pandas = "^2.2.3"
numpy = "^2.2.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
